[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-agent"
version = "0.1.0"
description = "Automated audit agent"
authors = [{name = "AxelTWC"}]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
